--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,14 @@
       <version>2.3.23</version>
     </dependency>
 
+    <!--lombok插件-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.6</version>
+    </dependency>
+
+
 
     <dependency>
       <groupId>commons-beanutils</groupId>
